--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   <meta name="description" content="Portfolio profesional de Wilder Rojas, Full Stack Developer & Software Engineer especializado en Java, Spring Boot, Angular, TypeScript y Flutter">
   <meta name="keywords" content="wilder rojas, portfolio, desarrollador, full stack, java, angular, spring boot, typescript, flutter">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Google Analytics (replace G-8J5RRERJCK with your Measurement ID) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8J5RRERJCK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);} 
+    gtag('js', new Date());
+    // Replace with your GA4 Measurement ID
+    gtag('config', 'G-8J5RRERJCK', { 'anonymize_ip': true });
+  </script>
 </head>
 <body>
   <app-root></app-root>
